kubernetes/apps/media/lidarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/controller: "ignore"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - lidarr.tituslab.dev
  rules:
    - matches:
        - path:
            type: Exact
            value: /ping
        - path:
            type: Exact
            value: /lidarr/ping
      backendRefs:
        - name: lidarr
          port: 8686
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: media-oidc-auth
      backendRefs:
        - name: lidarr
          port: 8686
